--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="morado_suave">#846DB0</color>
+    <color name="ripple_morado">#33FFFFFF</color> <!-- más transparente -->
 </resources>
