--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.InventarioApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!--Color de la Barra del Sistema-->
+        <item name="android:statusBarColor">@color/morado_suave</item>
+        <!-- Fondo global de la app -->
+        <item name="android:windowBackground">@android:color/white</item>
+        <!-- Iconos oscuros en la barra de estado -->
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.InventarioApp" parent="Base.Theme.InventarioApp" />
