Arregle errores de la navegacion, cree la vista de los usuarios y le añasi el crud funcional para crear, editar y eliminar usuarios. Hay nuevos archivos para todo el funcionamiento de los usuarios

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 <item
-    android:id="@+id/navigation_dashboard"
-    android:icon="@drawable/ic_dashboard"
-    android:title="Dashboard" />
+    android:id="@+id/navigation_usuarios"
+    android:icon="@drawable/ic_usuario"
+    android:title="Usuarios" />
 
 <item
     android:id="@+id/navigation_productos"
