--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,7 +14,7 @@
 <item
     android:id="@+id/navigation_notifications"
     android:icon="@drawable/ic_notifications"
-    android:title="Notificaciones" />
+    android:title="Sucursales" />
 
 <item
 
