--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="PartiallyHidden">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
@@ -33,20 +34,22 @@
                 android:layout_gravity="start|center_vertical"
                 android:layout_marginStart="8dp"
                 android:src="@drawable/iconfoxinversa"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginTop="8dp"
+                android:contentDescription="logoApp"
+                />
 
             <!-- Botón de notificaciones -->
             <ImageButton
                 android:id="@+id/btn_notificaciones"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_notificaciones_foreground"
+                android:src="@drawable/ic_notificaciones"
                 app:tint="@android:color/white"
-                android:contentDescription="Notificaciones" />
+                android:contentDescription="Notificaciones"/>
 
         </com.google.android.material.appbar.MaterialToolbar>
 
@@ -86,7 +89,8 @@
         android:layout_gravity="end"
         android:orientation="vertical"
         android:background="@android:color/white"
-        android:padding="16dp">
+        android:padding="16dp"
+        tools:ignore="RtlHardcoded">
 
         <TextView
             android:layout_width="match_parent"
