--- a/app/src/main/res/layout/fragment_sucursales.xml
+++ b/app/src/main/res/layout/fragment_sucursales.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gestión de Sucursales"
+        android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_margin="16dp"
