--- a/app/src/main/res/layout/dialog_usuario.xml
+++ b/app/src/main/res/layout/dialog_usuario.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -44,29 +45,34 @@
             android:padding="12dp"
             android:layout_marginTop="8dp"/>
 
-        <EditText
-            android:id="@+id/etRol"
+        <Spinner
+            android:id="@+id/spRol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ID Rol"
-            android:textColor="@color/black"
-            android:fontFamily="sans-serif-medium"
-            android:textColorHint="@color/morado_mas_suave"
-            android:inputType="number"
+            android:layout_marginTop="8dp"
+            android:spinnerMode="dropdown"
             android:padding="12dp"
-            android:layout_marginTop="8dp"/>
+            android:paddingStart="6dp"
+            android:paddingEnd="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="0dp"
+            android:backgroundTint="@color/morado_mas_suave"
+            android:popupBackground="@color/white"/>
 
-        <EditText
-            android:id="@+id/etSucursal"
+        <Spinner
+            android:id="@+id/spSucursal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="ID Sucursal (opcional)"
-            android:fontFamily="sans-serif-medium"
-            android:textColorHint="@color/morado_mas_suave"
-            android:textColor="@color/black"
-            android:inputType="number"
+            android:layout_marginTop="8dp"
+            android:spinnerMode="dropdown"
             android:padding="12dp"
-            android:layout_marginTop="8dp"/>
+            android:paddingStart="6dp"
+            android:paddingEnd="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="0dp"
+            android:backgroundTint="@color/morado_mas_suave"
+            android:popupBackground="@color/white"/>
+
 
     </LinearLayout>
 
