--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -7,6 +7,8 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/tvTitle"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Productos"
@@ -15,6 +17,55 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="10dp" />
+
+    <!-- Botón para ir a Categorias -->
+    <Button
+        android:id="@+id/btnVerCategorias"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gestionar categorías"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/morado_mas_suave"
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <!-- Botón flotante para agregar -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnCrearProductos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_input_add"
+        android:contentDescription="Agregar Producto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        app:tint="@color/morado_mas_suave"/>
+
+    <!-- Contenedor de productos -->
+    <ScrollView
+        android:id="@+id/scrollProductos"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/btnVerCategorias"
+        app:layout_constraintBottom_toTopOf="@id/btnCrearProductos"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="25dp">
+
+    <LinearLayout
+            android:id="@+id/contenedorProductos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="4dp">
+            <!-- Aquí se agregarán dinámicamente los CardViews de productos-->
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
