--- a/app/src/main/res/layout/activity_empleados.xml
+++ b/app/src/main/res/layout/activity_empleados.xml
@@ -182,10 +182,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="Movimiento Inventario"
+                    android:text="Movimientos Inventario"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textAlignment="center" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
