--- a/app/src/main/res/layout/fragment_inventario.xml
+++ b/app/src/main/res/layout/fragment_inventario.xml
@@ -19,7 +19,8 @@
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/btnFiltrarSucursal"
