--- a/app/src/main/res/menu/menu_top_bar.xml
+++ b/app/src/main/res/menu/menu_top_bar.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_editperfil"
-        android:title="Editar Perfil"
+        android:title="Ver Perfil"
         android:showAsAction="never" />
 
     <item
